Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#11944 closed bug (fixed)

BColumnListView doesn't display big fonts properly

Reported by: Janus Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by humdinger)

See screenshot

I wold like to remove the default height parameter in the BRow constructor and add a default constructor. The default constructor will use the be_plain_font->Size to set the height.

This is the result

Is anyone against it?

Attachments (2)

BColumnlistView.png (121.0 KB ) - added by Janus 10 years ago.
BeforeAfter.png (150.7 KB ) - added by Janus 10 years ago.

Download all attachments as: .zip

Change History (9)

by Janus, 10 years ago

Attachment: BColumnlistView.png added

by Janus, 10 years ago

Attachment: BeforeAfter.png added

comment:1 by Janus, 10 years ago

Component is Kits/Interface

Last edited 10 years ago by Janus (previous) (diff)

comment:2 by humdinger, 10 years ago

Component: - GeneralKits/Interface Kit
Description: modified (diff)
Owner: changed from nobody to axeld

comment:3 by axeld, 10 years ago

IIRC the BColumnListView was private/experimental in BeOS, so we can change it at will. Your suggestion definitely seem to make sense.

comment:4 by Janus, 10 years ago

Fixed in hrev48997.

comment:5 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

comment:6 by pulkomandy, 10 years ago

Hi Janus, I have added you to the "developers" in Trac. You should be able to close tickets yourself now.

comment:7 by Janus, 10 years ago

Thanks! :-)

Note: See TracTickets for help on using tickets.